--- a/.asf.yaml
+++ b/.asf.yaml
@@ -47,36 +47,39 @@ github:
     issues: true
     discussions: true
   protected_branches:
-    required_status_checks:
-      strict: true  # Require branches to be up to date before merging
-      contexts:
-        - "Check License Header"
-        - "cargo doc"
-        - "build and run with wasm-pack"
-        - "linux build test"
-        - "cargo test (macos-aarch64)"
-        - "Verify Vendored Code"
-        - "Check cargo fmt"
-        - "Verify MSRV (Min Supported Rust Version)"
-        - "cargo check datafusion-common features"
-        - "cargo check datafusion-substrait features"
-        - "cargo check datafusion-proto features"
-        - "cargo check datafusion features"
-        - "cargo check datafusion-functions features"
-        - "cargo test (amd64)"
-        - "cargo examples (amd64)"
-        - "cargo test doc (amd64)"
-        - "verify benchmark results (amd64)"
-        - "Run sqllogictest with Postgres runner"
-        - "Run sqllogictest in Substrait round-trip mode"
-        - "cargo test pyarrow (amd64)"
-        - "clippy"
-        - "check Cargo.toml formatting"
-        - "Use prettier to check formatting of documents"
-        - "check-files"
-        - "cargo test datafusion-cli (amd64)"
-        - "check configs.md and ***_functions.md is up-to-date"
-        - "Process"
+    main:
+      required_pull_request_reviews:
+        required_approving_review_count: 1
+      required_status_checks:
+        strict: true  # Require branches to be up to date before merging
+        contexts:
+          - "Check License Header"
+          - "cargo doc"
+          - "build and run with wasm-pack"
+          - "linux build test"
+          - "cargo test (macos-aarch64)"
+          - "Verify Vendored Code"
+          - "Check cargo fmt"
+          - "Verify MSRV (Min Supported Rust Version)"
+          - "cargo check datafusion-common features"
+          - "cargo check datafusion-substrait features"
+          - "cargo check datafusion-proto features"
+          - "cargo check datafusion features"
+          - "cargo check datafusion-functions features"
+          - "cargo test (amd64)"
+          - "cargo examples (amd64)"
+          - "cargo test doc (amd64)"
+          - "verify benchmark results (amd64)"
+          - "Run sqllogictest with Postgres runner"
+          - "Run sqllogictest in Substrait round-trip mode"
+          - "cargo test pyarrow (amd64)"
+          - "clippy"
+          - "check Cargo.toml formatting"
+          - "Use prettier to check formatting of documents"
+          - "check-files"
+          - "cargo test datafusion-cli (amd64)"
+          - "check configs.md and ***_functions.md is up-to-date"
+          - "Process"
     # needs to be updated as part of the release process
     # .asf.yaml doesn't support wildcard branch protection rules, only exact branch names
     # https://github.com/apache/infrastructure-asfyaml?tab=readme-ov-file#branch-protection
@@ -149,6 +152,7 @@ github:
   pull_requests:
     # enable updating head branches of pull requests
     allow_update_branch: true
+    allow_auto_merge: true
 
 # publishes the content of the `asf-site` branch to
 # https://datafusion.apache.org/
