Db/always runs check (#3)
* Always run CI checks

* Add `pre-job`

* For `config-docs-check`, we don't need pre-job

* Comments

* keep `branches-ignore`

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -50,6 +50,13 @@ github:
     main:
       required_pull_request_reviews:
         required_approving_review_count: 1
+      required_status_checks:
+        contexts:
+          - "Check License Header"
+          - "Use prettier to check formatting of documents"
+          - "check-files"
+          # This job marks steps in `.github/workflows/rust.yml` as required
+          - "Validate Rust Required Checks"
     # needs to be updated as part of the release process
     # .asf.yaml doesn't support wildcard branch protection rules, only exact branch names
     # https://github.com/apache/infrastructure-asfyaml?tab=readme-ov-file#branch-protection
